// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallToActionButton renders correctly 1`] = `
<div>
  <div
    class="css-16eud07-boxStyles-CallToAction"
  >
    <button
      class="css-1g379oy-BaseButton-boxStyles"
      data-testid="example"
      type="button"
    >
      Sign up
      <svg
        aria-hidden="true"
        class="css-1xyaayo-Icon"
        clip-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`CallToActionLink renders correctly 1`] = `
<div>
  <div
    class="css-16eud07-boxStyles-CallToAction"
  >
    <a
      class="css-fntt6f-TextLink-boxStyles"
      data-testid="example"
      href="#"
    >
      Sign up
      <svg
        aria-hidden="true"
        class="css-1xyaayo-Icon"
        clip-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
    </a>
  </div>
</div>
`;
